# Wechat_Assistant

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  PRIVATE_AGENT_PLAN.md  README.md  SESSION_HANDOFF.md  THIRD_PARTY_NOTICES.md  compose.yaml  config.example.json  design-qa.md  profile.local.example.json  pyproject.toml
backend/app/: __init__.py  config.py  db.py  logging_config.py  main.py  security.py
backend/app/agent/: __init__.py  chat_agent.py
backend/app/api/: deps.py  routes.py
backend/app/maps/: __init__.py  service.py
backend/app/models/: __init__.py
backend/app/services/: deepseek.py  weather.py
backend/app/tools/: __init__.py  builtin.py  policy.py
backend/app/wechat/: __init__.py  credentials.py  ilink_client.py  service.py
backend/tests/: conftest.py  test_api.py  test_config.py  test_db.py  test_docker.py  test_launchd.py  test_maps.py  test_security.py  test_tools.py  test_weather.py  test_wechat.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: main.tsx  styles.css
launchd/: com.uniubi.wechat-assistant.plist.template
scripts/: bootstrap-local.sh  launchd-agent.sh  run-backend.sh  verify-docker.sh
